mysql single instance module

--- a/inv_templates/mysql-playbook.j2
+++ b/inv_templates/mysql-playbook.j2
@@ -1,9 +1,8 @@
-- name: mysql mmm
-  hosts: mmm
+- name: mysql single instance
+  hosts: all
   external_task_id: {{ task_id }}
   pre_tasks:
     - pillar: {}
   roles:
     - common
-    - mmm
     - mysql
