--- a/inv_templates/mysql-setting.j2
+++ b/inv_templates/mysql-setting.j2
@@ -25,8 +25,9 @@ mysql_stage:
     - import
 
 mysql_common:
-  default:
-    password: {{ password }}
+  hostname:
+    {{ hostname }}:
+      password: {{ password }}
 
 mysql_user:
   default:
