--- a/inv_templates/mysql-setting.j2
+++ b/inv_templates/mysql-setting.j2
@@ -24,7 +24,7 @@ mysql_stage:
     - users_base
     - import
 
-mysql_common:
+mysql_root:
   hostname:
     {{ hostname }}:
       password: {{ password }}
