--- a/inv_templates/mysql-setting.j2
+++ b/inv_templates/mysql-setting.j2
@@ -29,7 +29,7 @@ mysql_root:
     {{ hostname }}:
       password: {{ password }}
 
-mysql_user:
+mysql_app_user:
   default:
     app:
       - name: root
