--- a/inv_templates/mysql-playbook.j2
+++ b/inv_templates/mysql-playbook.j2
@@ -1,7 +1,6 @@
 - name: mysql single instance
   hosts: all
-  external_task_id: {{ task_id }}
-  pre_tasks:
+{{ task_id }}  pre_tasks:
     - pillar: {}
   roles:
     - common
