--- a/inv_templates/mysql-setting-aws.j2
+++ b/inv_templates/mysql-setting-aws.j2
@@ -43,7 +43,7 @@ mysql_app_user:
 mysql_database:
   args:
     type: list
-  dafault:
+  default:
     - name: {{ database }}
       collation: utf8mb4_general_ci
       encoding: utf8mb4
