--- a/inv_templates/mha-setting.j2
+++ b/inv_templates/mha-setting.j2
@@ -18,7 +18,7 @@ mysql_stage:
   args:
     type: list
   hostname:
-{%- for dhost in data_hosts %}
+{%- for dhost in data_hostlist %}
     {{ dhost }}:
       - rpm
       - conf
