--- a/inv_templates/dbbackup-mysql-enable-playbook.j2
+++ b/inv_templates/dbbackup-mysql-enable-playbook.j2
@@ -6,11 +6,11 @@
     - name: set crontab
       mycron:
         name: "MySQL Backup Scheduler"
-        minute: {{ minute }}
-        hour: {{ hour }}
-        day: {{ day }}
-        month: {{ month }}
-        weekday: {{ day_of_week }}
+        minute: "{{ minute }}"
+        hour: "{{ hour }}"
+        day: "{{ day }}"
+        month: "{{ month }}"
+        weekday: "{{ day_of_week }}"
         job:  "/dbbackup/pyxbackup cron"
         state: present
 
@@ -19,8 +19,9 @@
         name: "MySQL Backup Scheduler"
         state: query
       register: crontab
-
+{% raw %}
     - name: Record crontab result
       ara_record:
         key: "mybak_{{ inventory_hostname }}"
         value: "{{ crontab }}"
+{% endraw %}
