--- a/inv_templates/mmm-setting.j2
+++ b/inv_templates/mmm-setting.j2
@@ -42,6 +42,7 @@ mysql_stage:
       - common
       - rpm
       - conf
+      - backup
       - limits
       - initdb
       - databases
@@ -53,13 +54,6 @@ mysql_stage:
       - replication
 {%- endfor %}
 
-mysql_backup_stage:
-  args:
-    type: list
-  default:
-    - conf
-    - cron
-
 parted_stage:
   args:
     type: list
@@ -68,12 +62,13 @@ parted_stage:
     - rpm
     - mount
 
-mysql_backup_stage:
-  args:
-    type: list
+mysql_backup:
   default:
-    - conf
-    - cron
+    backup_root_dir: /dbbackup
+    backup_data_dir: /dbbackup/{{ service_name }}/{{ dbfqdn }}/{{ hostname }}
+    retention_sets: 3
+    incr_retention_sets: 2
+    enable: {{ enable_backup }}
 
 mmm_group:
   default:
