--- a/inv_templates/mysql-setting.j2
+++ b/inv_templates/mysql-setting.j2
@@ -21,6 +21,7 @@ mysql_stage:
     - common
     - rpm
     - conf
+    - backup
     - limits
     - initdb
     - databases
@@ -29,13 +30,6 @@ mysql_stage:
     - users_dba
     - users_vtr
     - import
-
-mysql_backup_stage:
-  args:
-    type: list
-  default:
-    - conf
-    - cron
 
 parted_stage:
   args:
@@ -56,6 +50,7 @@ mysql_backup:
     backup_data_dir: /dbbackup/{{ service_name }}/{{ hostname }}/{{ hostname }}
     retention_sets: 3
     incr_retention_sets: 2
+    enable: {{ enable_backup }}
 
 mysql_app_user:
   default:
