--- a/inv_templates/pxc-setting-aws.j2
+++ b/inv_templates/pxc-setting-aws.j2
@@ -5,21 +5,16 @@ common_stage:
     - proxy
     - repo
     - rpm
-    - grub
-    - ifcfg
     - sysctl
     - limits
-    - snmpd
     - ssh
-    - postfix
-    - rsyslog
 
 mysql_stage:
   args:
     type: list
   default:
-    - common
-    - rpm
+    - pxc_common
+    - pxc_rpm
     - conf
     - backup
     - limits
@@ -27,8 +22,8 @@ mysql_stage:
     - databases
     - users_app
     - users_base
-    - users_dba
-    - users_vtr
+    - users_pxc
+    - pxc_bootstrap
     - import
 
 parted_stage:
@@ -40,17 +35,19 @@ parted_stage:
     - mount
 
 mysql_root:
-  hostname:
-    {{ hostname }}:
-      password: '{{ password }}'
+  default:
+    password: '{{ password }}'
 
 mysql_backup:
-  default:
-    backup_root_dir: /dbbackup
-    backup_data_dir: /dbbackup/{{ service_name }}/{{ hostname }}/{{ hostname }}
-    retention_sets: 3
-    incr_retention_sets: 2
-    enable: {{ enable_backup }}
+  hostname:
+{%- for dhost in data_hostlist %}
+    {{ dhost }}:
+        backup_root_dir: /dbbackup
+        backup_data_dir: /dbbackup/{{ service_name }}/{{ dhost }}/{{ dhost }}
+        retention_sets: 3
+        incr_retention_sets: 2
+        enable: {{ enable_backup }}
+{%- endfor %}
 
 mysql_app_user:
   default:
@@ -73,3 +70,23 @@ mysql_database:
     - name: {{ database }}
       collation: utf8mb4_general_ci
       encoding: utf8mb4
+
+mysql_plugin:
+  args:
+    type: list
+  default:
+    - validate_password
+    - wsrep
+
+mysql_daemon:
+  args:
+    check_osver: True
+  default:
+    7:
+      mysql_daemon: mysql
+      version: 5.7.21
+
+pxc_group:
+  default:
+    pxcluster:
+{{ pxc_group }}
