support mmm for centos 7

--- a/inv_templates/mmm-setting.j2
+++ b/inv_templates/mmm-setting.j2
@@ -135,7 +135,7 @@ pacemaker_group:
           group:
             name: mmm
           options:
-            ip: {{ mon_vip }}
+            ip: {{ monitor_vip }}
             cidr_netmask: 24
             nic: eth0
           op:
