support mmm for centos 7

--- a/inv_templates/mmm-setting.j2
+++ b/inv_templates/mmm-setting.j2
@@ -124,7 +124,7 @@ pacemaker_group:
     mmmcluster:
       nodes:
 {%- for mhost in mmm_hostlist %}
-        - {{ mhost }}:
+        - {{ mhost }}
 {%- endfor %}
       property:
         stonith-enabled: "false"
